# AVRDevelopmentFramework

./: .gitmodules  CMakeLists.txt  README.md  buildTestAVRLibraries.sh  buildUT.sh  exampleReport.info
.github/workflows/: CI.yml  cmake.yml
ci/avrlib/: runCMake.sh  runMake.sh
ci/ut/: runCMake.sh  runCTest.sh  runLcov.sh  runMake.sh
ci/ut_asan/: runCMake.sh  runCTest.sh  runMake.sh
ci/ut_lcov/: installAndRunCppCoveralls.sh  runCMake.sh  runMake.sh
cmake/: CodeCoverage.cmake  CopyAvrLibcIncludes.cmake  FetchCMocka.cmake  ParseOptions.cmake  SetTargetOptions.cmake
include/avrframework/: ByteMacros.h  PortMacros.h
include/avrframework/macros/: ByteMacros.h  GpioMacros.h  IOMacros.h
include/avrframework/microos/: InterruptVectorsController.h  SystemTimeController.h
include/avrframework/types/: AllTypes.h  EBoolean.h  SPinPortData.h  TBitNumber.h  TByte.h  TCallback.h  TMcuRegister.h  TPin.h  TPinNumber.h  TPort.h
include/avrframework/utilities/: RegisterOperations.h
scripts/: buildAndRunUT.sh  buildAndRunUTWithAsan.sh  buildAndRunUTWithCodeCoverage.sh  buildTestPrograms.sh
src/: CMakeLists.txt
src/communication/: CMakeLists.txt
src/macros/: CMakeLists.txt
src/microos/: CMakeLists.txt  InterruptVectorsController.c  SystemTimeController.c
src/types/: CMakeLists.txt
src/utilities/: CMakeLists.txt  RegisterOperations.c
stub/: CMakeLists.txt
stub/avrframeworkstub/: CMakeLists.txt
stub/avrframeworkstub/avrlib/: AvrInterrupts.h  AvrIo.c  AvrIo.h  CMakeLists.txt  UtilAtomic.h  UtilDelay.c  UtilDelay.h
stub/avrframeworkstub/communication/: CMakeLists.txt
stub/avrframeworkstub/microos/: CMakeLists.txt
stub/avrframeworkstub/utilities/: CMakeLists.txt  RegisterOperations.c  RegisterOperations.h
test/: ByteMacrosTests.c  CMakeLists.txt  GpioMacrosTests.c  TypesTests.c
test-programs/: CMakeLists.txt  TestProgramMacros.c  testUtilities.c
test/ut/: CMakeLists.txt
test/ut/communication/: CMakeLists.txt  UartTests.c
test/ut/macros/: ByteMacrosTests.c  CMakeLists.txt  GpioMacrosTests.c  IOMacrosTests.c
test/ut/microos/: CMakeLists.txt
test/ut/types/: CMakeLists.txt  TypesTests.c
test/ut/utilities/: CMakeLists.txt  RegisterOperationsTests.c
